# compraventa

./: Cargo.toml
src/: archivos_estaticos.rs  main.rs
src/models/: models.rs
src/routes/: routes.rs
src/services/: mod.rs
src/services/get/: get_products.rs  get_purschases.rs  get_sale_by_id.rs  get_sales.rs  inventory.rs  mod.rs
src/services/post/: mod.rs  register_products.rs  register_purchase.rs  register_sale.rs
src/services/update/: mod.rs  update_price_sale.rs
static/css/: styles.css
templates/: index.html
templates/indicadores/: indicadores.html  indicadores_inversion.html  indicadores_ventas.html
templates/inventario/: inventario.html  precio_venta.html  productos_inventario.html
templates/registros/: registro_compra.html  registro_producto.html  registro_venta.html  registros.html
